--- a/3.transition-index.html
+++ b/3.transition-index.html
@@ -10,21 +10,21 @@
 <body>
 <div id="pageHome" class="page out" data-classname="custome">
   <ul class="list">
-    <li><a href="#page1">页面1-fade</a></li>
-    <li><a href="#page2">页面2-flip</a></li>
-    <li><a href="#page3">页面3-turn</a></li>
-    <li><a href="#page4">页面4-flow</a></li>
-    <li><a href="#page5">页面5-slideup</a></li>
+    <li><a href="#!/page1">页面1-fade</a></li>
+    <li><a href="#!/page2">页面2-flip</a></li>
+    <li><a href="#!/page3">页面3-turn</a></li>
+    <li><a href="#!/page4">页面4-flow</a></li>
+    <li><a href="#!/page5">页面5-slideup</a></li>
   </ul>
   <ul class="list">
     <li><a href="index.html" data-rel="external">&laquo; 返回测试引导首页</a></li>
   </ul>
 </div>
-<div id="page1" class="page out" data-classname="fade"><a href="#pageHome" class="btn btn-back">&laquo;返回1</a></div>
-<div id="page2" class="page out" data-classname="flip"><a href="#pageHome" class="btn btn-back">&laquo;返回2</a></div>
-<div id="page3" class="page out" data-classname="turn"><a href="#pageHome" class="btn btn-back">&laquo;返回3</a></div>
-<div id="page4" class="page out" data-classname="flow"><a href="#pageHome" class="btn btn-back">&laquo;返回4</a></div>
-<div id="page5" class="page out" data-classname="slideup"><a href="#pageHome" class="btn btn-back">&laquo;返回5</a></div>
+<div id="page1" class="page out" data-classname="fade"><a href="#!/pageHome" class="btn btn-back">&laquo;返回1</a></div>
+<div id="page2" class="page out" data-classname="flip"><a href="#!/pageHome" class="btn btn-back">&laquo;返回2</a></div>
+<div id="page3" class="page out" data-classname="turn"><a href="#!/pageHome" class="btn btn-back">&laquo;返回3</a></div>
+<div id="page4" class="page out" data-classname="flow"><a href="#!/pageHome" class="btn btn-back">&laquo;返回4</a></div>
+<div id="page5" class="page out" data-classname="slideup"><a href="#!/pageHome" class="btn btn-back">&laquo;返回5</a></div>
 
 <script src="js/lib/require.js"></script>
 <script>
