--- a/4.fixed-header-footer-index.html
+++ b/4.fixed-header-footer-index.html
@@ -42,10 +42,10 @@
   </div>
 </section>
 <footer>
-  <a href="#home">home</a>
-  <a href="#page1">页面1</a>
-  <a href="#page2">页面2</a>
-  <a href="#page3">页面3</a>
+  <a href="#!/home">home</a>
+  <a href="#!/page1">页面1</a>
+  <a href="#!/page2">页面2</a>
+  <a href="#!/page3">页面3</a>
 </footer>
 <script src="js/lib/require.js"></script>
 <script>
