--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <li><a href="4.fixed-header-footer-index.html" data-rel="external">固定的头部和底部</a></li>
     <!--<li><a href="modular-load/index.html" data-rel="external">seajs等模块化加载演示</a></li>-->
     <!--<li><a href="backbone/index.html" data-rel="external">backbone组合示例</a></li>-->
-    <li><a href="5.wx.html" data-rel="external">微信综合实例</a></li>
+    <li><a href="5.wx.html?t=123" data-rel="external">微信综合实例</a></li>
+    <li><a href="6.tabs.html" data-rel="external">简单tabs事例</a></li>
+    <li><a href="7.bindevent.html" data-rel="external">简单事件调用</a></li>
   </ul>
 </div>
 <script src="js/lib/require.js"></script>
