--- a/1.slider-index.html
+++ b/1.slider-index.html
@@ -8,19 +8,19 @@
 </head>
 
 <body>
-<div id="pageHome" class="page out">
+<div id="home" class="page out">
   <ul class="list">
-    <li><a href="#page1">页面1</a></li>
-    <li><a href="#page2">页面2</a></li>
-    <li><a href="#page3">页面3</a></li>
+    <li><a href="#!/page1">页面1</a></li>
+    <li><a href="#!/page2">页面2</a></li>
+    <li><a href="#!/page3">页面3</a></li>
   </ul>
   <ul class="list">
     <li><a href="index.html" data-rel="external">&laquo; 返回测试引导首页</a></li>
   </ul>
 </div>
-<div id="page1" class="page out"><a href="#pageHome" class="btn btn-back">&laquo;返回1</a></div>
-<div id="page2" class="page out"><a href="#pageHome" class="btn btn-back">&laquo;返回2</a></div>
-<div id="page3" class="page out"><a href="#pageHome" class="btn btn-back">&laquo;返回3</a></div>
+<div id="page1" class="page out"><a href="#!/home" class="btn btn-back">&laquo;返回1</a></div>
+<div id="page2" class="page out"><a href="#!/home" class="btn btn-back">&laquo;返回2</a></div>
+<div id="page3" class="page out"><a href="#!/home" class="btn btn-back">&laquo;返回3</a></div>
 
 <script src="js/lib/require.js"></script>
 <script>
