--- a/2.ajax-index.html
+++ b/2.ajax-index.html
@@ -12,19 +12,17 @@
   <ul class="list">
     <li><a href="2.1ajax.html">ajax页面1</a></li>
     <li><a href="2.2ajax.html"  data-reload="true">ajax页面2-每次都刷新</a></li>
-    <li><a href="#page3">页面3</a></li>
+    <li><a href="#!/page3">页面3</a></li>
   </ul>
   <ul class="list">
     <li><a href="index.html" data-rel="external">&laquo; 返回测试引导首页</a></li>
   </ul>
 </div>
 <div id="page3" class="page out">
-  <a href="#pageHome" class="btn btn-back">&laquo;返回3</a>
-</div>
-<div id="2.2ajax2" class="page out">
-  <a href="#pageHome" data-rel="back">&laquo;ajax2返回</a>
+  <a href="#!/pageHome" class="btn btn-back">&laquo;返回3</a>
 </div>
 <script src="js/lib/require.js"></script>
+
 <script>
   require(['./js/lib/mobile', './js/lib/fastclick'], function(mobile, fastclick) {
     fastclick.attach(document.body);
