--- a/5.wx.html
+++ b/5.wx.html
@@ -9,20 +9,34 @@
 </head>
 
 <body>
+<header id="header" class="header">
+  <h1 class="pull-left">微信</h1>
+  <div class="pull-right">
+    <a href="index.html" data-rel="external" class="icon icon-search">搜索</a>
+    <a href="index.html" data-rel="external" class="icon icon-add">添加</a>
+  </div>
+</header>
 <section id="home" class="page out" data-title="微信">
-  <header class="header">
-    <h1 class="pull-left">微信</h1>
-    <div class="pull-right">
-      <a href="index.html" data-rel="external" class="icon icon-search">搜索</a>
-      <a href="index.html" data-rel="external" class="icon icon-add">添加</a>
-    </div>
-  </header>
   <div class="content">
     <ul class="wx-list">
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
+          </div>
+          <div class="cell">
+            <div class="pull">
+              <h5 class="pull-left">腾讯新闻</h5>
+              <time class="pull-right">早上08:47</time>
+            </div>
+            <p class="wx-list-p">习近平：文艺不能当市场</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="#!/news-list" class="ovh wx-list-a">
+          <div class="l">
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -34,9 +48,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -48,9 +62,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -62,9 +76,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -76,9 +90,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -90,9 +104,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -104,9 +118,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -118,9 +132,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -132,23 +146,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh wx-list-a">
+        <a href="#!/news-list" class="ovh wx-list-a">
           <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
-          </div>
-          <div class="cell">
-            <div class="pull">
-              <h5 class="pull-left">腾讯新闻</h5>
-              <time class="pull-right">早上08:47</time>
-            </div>
-            <p class="wx-list-p">习近平：文艺不能当市场的奴隶</p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="#news-list" class="ovh wx-list-a">
-          <div class="l">
-            <img src="imgs/news.png" alt="" class="wx-list-img"/>
+            <img src="imgs/wx/news.png" alt="" class="wx-list-img"/>
           </div>
           <div class="cell">
             <div class="pull">
@@ -163,19 +163,12 @@
   </div>
 </section>
 <section id="contact" class="page out" data-title="通讯录">
-  <header class="header">
-    <h1 class="pull-left">通讯录</h1>
-    <div class="pull-right">
-      <a href="index.html" data-rel="external" class="icon icon-search">搜索</a>
-      <a href="index.html" data-rel="external" class="icon icon-add">添加</a>
-    </div>
-  </header>
   <div class="content">
     <ul class="contact-list">
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-1.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-1.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -185,9 +178,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-2.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-2.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -197,9 +190,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-3.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-3.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -209,9 +202,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-4.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-4.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -226,9 +219,9 @@
     </h5>
     <ul class="contact-list">
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-1.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-1.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -243,9 +236,9 @@
     </h5>
     <ul class="contact-list">
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-1.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-1.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -255,9 +248,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-2.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-2.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -272,9 +265,9 @@
     </h5>
     <ul class="contact-list">
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-1.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-1.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -284,9 +277,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-2.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-2.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -296,9 +289,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-3.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-3.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -308,9 +301,9 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh contact-list-a">
+        <a href="#!/news-list" class="ovh contact-list-a">
           <div class="l">
-            <img src="imgs/contact-4.png" alt="" class="contact-list-img"/>
+            <img src="imgs/wx/contact-4.png" alt="" class="contact-list-img"/>
           </div>
           <div class="cell">
             <p class="contact-list-p">
@@ -322,18 +315,11 @@
     </ul>
   </div>
 </section>
-<section id="find" class="page out" data-title="发现">
-  <header class="header">
-    <h1 class="pull-left">发现</h1>
-    <div class="pull-right">
-      <a href="index.html" data-rel="external" class="icon icon-search">搜索</a>
-      <a href="index.html" data-rel="external" class="icon icon-add">添加</a>
-    </div>
-  </header>
+<section id="find" class="page out" data-title="发现" >
   <div class="content">
     <ul class="find-list">
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-friend"></i>
           </div>
@@ -347,7 +333,7 @@
     </ul>
     <ul class="find-list">
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-scan"></i>
           </div>
@@ -359,7 +345,7 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-shake"></i>
           </div>
@@ -373,7 +359,7 @@
     </ul>
     <ul class="find-list">
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-near"></i>
           </div>
@@ -385,7 +371,7 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-bottle"></i>
           </div>
@@ -399,7 +385,7 @@
     </ul>
     <ul class="find-list">
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-shopping"></i>
           </div>
@@ -411,7 +397,7 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh find-list-a">
+        <a href="#!/news-list" class="ovh find-list-a">
           <div class="l">
             <i class="find-list-img icon icon-game"></i>
           </div>
@@ -426,17 +412,10 @@
   </div>
 </section>
 <section id="me" class="page out" data-title="我">
-  <header class="header">
-    <h1 class="pull-left">我</h1>
-    <div class="pull-right">
-      <a href="index.html" data-rel="external" class="icon icon-search">搜索</a>
-      <a href="index.html" data-rel="external" class="icon icon-add">添加</a>
-    </div>
-  </header>
   <div class="content">
     <ul class="me-list">
       <li>
-        <a href="#news-list" class="ovh me-list-a">
+        <a href="#!/news-list" class="ovh me-list-a">
           <div class="l">
             <i class="me-list-img icon icon-albums"></i>
           </div>
@@ -448,7 +427,7 @@
         </a>
       </li>
       <li>
-        <a href="#news-list" class="ovh me-list-a">
+        <a href="#!/news-list" class="ovh me-list-a">
           <div class="l">
             <i class="me-list-img icon icon-storage"></i>
           </div>
@@ -462,7 +441,7 @@
     </ul>
     <ul class="me-list">
       <li>
-        <a href="#news-list" class="ovh me-list-a">
+        <a href="#!/news-list" class="ovh me-list-a">
           <div class="l">
             <i class="me-list-img icon icon-wallet"></i>
           </div>
@@ -476,7 +455,7 @@
     </ul>
     <ul class="me-list">
       <li>
-        <a href="#news-list" class="ovh me-list-a">
+        <a href="#!/news-list" class="ovh me-list-a">
           <div class="l">
             <i class="me-list-img icon icon-settings"></i>
           </div>
@@ -496,23 +475,23 @@
     <h1 class="pull-left">腾讯新闻</h1>
   </header>
   <div class="content">
-    <img src="imgs/1.jpg" alt="" width="320"/>
+    <img src="imgs/wx/1.jpg" alt="" width="320"/>
   </div>
 </section>
 <footer id="footer" class="footer">
-  <a href="#home">
+  <a href="#!/home">
     <i class="icon icon-wx"></i>
     微信
   </a>
-  <a href="#contact">
+  <a href="#!/contact">
     <i class="icon icon-contact"></i>
     通讯录
   </a>
-  <a href="#find">
+  <a href="#!/find">
     <i class="icon icon-find"></i>
     发现
   </a>
-  <a href="#me">
+  <a href="#!/me">
     <i class="icon icon-me"></i>
     我
   </a>
@@ -526,10 +505,11 @@
     mobile
       .on('pageInit', function(page) {
         var id = page.id,
+          header = document.getElementById('header'),
           footer = document.getElementById('footer'),
           pageIds = ['home', 'contact', 'find', 'me'],
           inTags = false;
-        pageIds.forEach(function(n, i) {
+        pageIds.forEach(function(n) {
           if (id === n) {
             inTags = true;
           }
@@ -537,16 +517,24 @@
         if (inTags) {
           pageIds.forEach(function(n, i) {
             if (id === n) {
-              footer.classList.remove('hidden-toolbar');
-              footer.classList.add('hiding-toolbar');
+              header.style.display = 'block';
+              footer.style.display = 'block';
+//              footer.classList.add('hiding-toolbar');
+//              footer.addEventListener("webkitAnimationEnd", function() {
+//                footer.classList.remove('hiding-toolbar');
+//              });
               footerA[i].classList.add('active');
             } else {
               footerA[i].classList.remove('active');
             }
           });
         } else {
-          footer.classList.remove('hiding-toolbar');
-          footer.classList.add('hidden-toolbar');
+          header.style.display = 'none';
+          footer.style.display = 'none';
+//          footer.classList.add('hidden-toolbar');
+//          footer.addEventListener("webkitAnimationEnd", function() {
+//            footer.classList.remove('hidden-toolbar');
+//          });
         }
       })
       .init();
