--- a/fn/slider/index.html
+++ b/fn/slider/index.html
@@ -46,7 +46,7 @@
 </div>
 <script src="../../js/lib/require.js"></script>
 <script>
-  require('./js/slider', function(slider) {
+  require('./js/slider2', function(slider) {
     slider({
       dom: document.getElementById('slider'),
       list: [{
