--- a/framework/checkbox.html
+++ b/framework/checkbox.html
@@ -1,17 +1,16 @@
 <div id="checkbox" class="page out">
   <header class="header">
-    <div>
+    <div class="header-left">
       <a href="javascript:history.back();" class="btn btn-link">
-        <i class="fa fa-lg fa-chevron-left"></i> left
+        <i class="fa fa-lg fa-chevron-left"></i> Back
       </a>
     </div>
-    <h1>
-      checkbox
-    </h1>
-    <div>
-      <a href="" class="btn btn-link">
-        right
-      </a>
+    <div class="header-center">
+      <h1 class="header-center-in">
+        checkbox
+      </h1>
+    </div>
+    <div class="header-right">
     </div>
   </header>
   <main class="main">
