--- a/framework/list.html
+++ b/framework/list.html
@@ -1,17 +1,16 @@
 <div id="list" class="page out">
   <header class="header">
-    <div>
+    <div class="header-left">
       <a href="javascript:history.back();" class="btn btn-link">
         <i class="fa fa-lg fa-chevron-left"></i> Back
       </a>
     </div>
-    <h1>
-      list
-    </h1>
-    <div>
-      <a href="" class="btn btn-link">
-        right
-      </a>
+    <div class="header-center">
+      <h1 class="header-center-in">
+        list
+      </h1>
+    </div>
+    <div class="header-right">
     </div>
   </header>
   <main class="main">
@@ -22,7 +21,7 @@
       <ul class="list">
         <li class="list-content">
           <div class="list-media">
-            <div class="fa-stack fa-lg theme-color-orange">
+            <div class="fa-stack fa-lg color-orange">
               <i class="fa fa-square fa-stack-2x"></i>
               <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
             </div>
@@ -38,7 +37,7 @@
         </li>
         <li class="list-content">
           <div class="list-media">
-            <div class="fa-stack fa-lg theme-color-orange">
+            <div class="fa-stack fa-lg color-orange">
               <i class="fa fa-square fa-stack-2x"></i>
               <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
             </div>
@@ -54,7 +53,7 @@
         </li>
         <li class="list-content">
           <div class="list-media">
-            <div class="fa-stack fa-lg theme-color-orange">
+            <div class="fa-stack fa-lg color-orange">
               <i class="fa fa-square fa-stack-2x"></i>
               <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
             </div>
@@ -76,7 +75,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -95,7 +94,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -114,7 +113,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -307,7 +306,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -326,11 +325,11 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -359,7 +358,7 @@
             <li>
               <a href="" class="list-content">
                 <div class="list-media">
-                  <div class="fa-stack fa-lg theme-color-orange">
+                  <div class="fa-stack fa-lg color-orange">
                     <i class="fa fa-square fa-stack-2x"></i>
                     <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
                   </div>
@@ -378,11 +377,11 @@
             <li>
               <a href="" class="list-content">
                 <div class="list-media">
-                  <div class="fa-stack fa-lg theme-color-orange">
+                  <div class="fa-stack fa-lg color-orange">
                     <i class="fa fa-square fa-stack-2x"></i>
                     <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
                   </div>
-                  <div class="fa-stack fa-lg theme-color-orange">
+                  <div class="fa-stack fa-lg color-orange">
                     <i class="fa fa-square fa-stack-2x"></i>
                     <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
                   </div>
@@ -411,7 +410,7 @@
             <li>
               <a href="" class="list-content">
                 <div class="list-media">
-                  <div class="fa-stack fa-lg theme-color-orange">
+                  <div class="fa-stack fa-lg color-orange">
                     <i class="fa fa-square fa-stack-2x"></i>
                     <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
                   </div>
@@ -429,7 +428,7 @@
             <li>
               <div class="list-content">
                 <div class="list-media">
-                  <div class="fa-stack fa-lg theme-color-orange">
+                  <div class="fa-stack fa-lg color-orange">
                     <i class="fa fa-square fa-stack-2x"></i>
                     <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
                   </div>
@@ -452,7 +451,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -470,7 +469,7 @@
         <li>
           <div class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -499,7 +498,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -518,11 +517,11 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -540,7 +539,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -558,7 +557,7 @@
         <li>
           <div class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -587,7 +586,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -606,11 +605,11 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -628,7 +627,7 @@
         <li>
           <a href="" class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
@@ -646,7 +645,7 @@
         <li>
           <div class="list-content">
             <div class="list-media">
-              <div class="fa-stack fa-lg theme-color-orange">
+              <div class="fa-stack fa-lg color-orange">
                 <i class="fa fa-square fa-stack-2x"></i>
                 <i class="fa fa-flag fa-stack-1x fa-inverse"></i>
               </div>
