--- a/framework/theme.html
+++ b/framework/theme.html
@@ -1,4 +1,4 @@
-<div id="grid" class="page out">
+<div id="theme" class="page out">
   <header class="header">
     <div class="header-left">
       <a href="javascript:history.back();" class="btn btn-link">
@@ -7,7 +7,7 @@
     </div>
     <div class="header-center">
       <h1 class="header-center-in">
-        grid
+        theme
       </h1>
     </div>
     <div class="header-right">
@@ -16,73 +16,82 @@
   <main class="main">
     <box class="box box-lg">
       <title class="box-in">
-        grid-1
-      </title>
-      <div class="grid-wrap">
-        <div class="grid grid-1">
-          <div class="grid-col">
-            <div class="grid-in">
-              1234
-            </div>
-          </div>
-          <div class="grid-col">
-            <div class="grid-in">
-              1234
-            </div>
-          </div>
-          <div class="grid-col">
-            <div class="grid-in">
-              1234
-            </div>
-          </div>
-        </div>
-      </div>
-    </box>
-
-    <box class="box box-lg">
-      <title class="box-in">
-        grid-2
-      </title>
-      <div class="grid-wrap">
-        <div class="grid grid-2">
-          <div class="grid-col">
-            <div class="grid-in">
-              1234
-            </div>
-          </div>
-          <div class="grid-col">
-            <div class="grid-in">
-              1234
-            </div>
-          </div>
-          <div class="grid-col">
-            <div class="grid-in">
-              1234
-            </div>
-          </div>
-        </div>
-      </div>
-    </box>
-
-    <box class="box box-lg">
-      <title class="box-in">
-        grid-3
+        Choose Layout Theme
       </title>
       <div class="grid-wrap">
         <div class="grid grid-3">
           <div class="grid-col">
-            <div class="grid-in">
-              1234
+            <div class="grid-in" data-layout="default">
+
             </div>
           </div>
           <div class="grid-col">
-            <div class="grid-in">
-              1234
+            <div class="grid-in" data-layout="dark">
+
             </div>
           </div>
           <div class="grid-col">
-            <div class="grid-in">
-              1234
+            <div class="grid-in" data-layout="white">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </box>
+    <box class="box box-lg">
+      <title class="box-in">
+        Choose Color Theme
+      </title>
+      <div class="grid-wrap">
+        <div class="grid grid-5">
+          <div class="grid-col">
+            <div class="grid-in" data-theme="white">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="black">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="blue">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="orange">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="red">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="pink">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="green">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="lightblue">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="yellow">
+
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in" data-theme="gray">
+
             </div>
           </div>
         </div>
