--- a/framework/btn.html
+++ b/framework/btn.html
@@ -1,18 +1,19 @@
 <div id="btn" class="page out">
   <header class="header">
-    <div>
+    <div class="header-left">
       <a href="javascript:history.back();" class="btn btn-link">
         <i class="fa fa-lg fa-chevron-left"></i> Back
       </a>
     </div>
-    <h1 class="btn-group">
-      <a href="#" class="btn active">this is btn</a>
-      <a href="#" class="btn">this is btn</a>
-    </h1>
-    <div>
-      <a href="" class="btn btn-link">
-        right
-      </a>
+    <div class="header-center">
+      <div class="header-center-in">
+        <div class="btn-group">
+          <a href="#" class="btn active">this is btn</a>
+          <a href="#" class="btn">this is btn</a>
+        </div>
+      </div>
+    </div>
+    <div class="header-right">
     </div>
   </header>
   <main class="main">
@@ -32,10 +33,10 @@
       <a href="" class="btn btn-rd">this is btn</a>
     </box>
     <box class="box box-lg">
-      <a href="" class="btn btn-lg theme-bg-green">this is btn</a>
+      <a href="" class="btn btn-lg bg-green">this is btn</a>
     </box>
     <box class="box box-lg">
-      <a href="" class="btn btn-lg theme-bg-red">this is btn</a>
+      <a href="" class="btn btn-lg bg-red">this is btn</a>
     </box>
     <box class="box box-lg">
       <div class="btn-group">
