--- a/framework/checkbox.html
+++ b/framework/checkbox.html
@@ -13,8 +13,8 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-lg">
+  <div class="main">
+    <section class="box box-lg">
       <title class="box-in">
         Slide ONE
       </title>
@@ -22,7 +22,7 @@
         <input type="checkbox" value="None" id="slideOne" name="check" />
         <label for="slideOne"></label>
       </div>
-    </box>
+    </section>
     <!--  -->
 
     <!-- Slide TWO -->
@@ -73,7 +73,7 @@
       <label for="squaredFour"></label>
     </div>
 
-  </main>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
