--- a/framework/index.html
+++ b/framework/index.html
@@ -21,11 +21,11 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-xl">
-      <title class="box-in">
+  <div class="main">
+    <section class="box box-xl">
+      <div class="box-in">
         all eg:
-      </title>
+      </div>
       <ul class="list">
         <li>
           <a href="alert.html" class="list-content">
@@ -118,8 +118,8 @@
           </a>
         </li>
       </ul>
-    </box>
-  </main>
+    </section>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
