--- a/framework/list.html
+++ b/framework/list.html
@@ -13,11 +13,11 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-xl">
-      <title class="box-in">
+  <div class="main">
+    <section class="box box-xl">
+      <div class="box-in">
         Data list, with icons
-      </title>
+      </div>
       <ul class="list">
         <li class="list-content">
           <div class="list-media">
@@ -65,12 +65,12 @@
           </div>
         </li>
       </ul>
-    </box>
+    </section>
 
-    <box class="box box-xl">
-      <title class="box-in">
+    <section class="box box-xl">
+      <div class="box-in">
         LINKS
-      </title>
+      </div>
       <ul class="list">
         <li>
           <a href="" class="list-content">
@@ -129,12 +129,12 @@
           </a>
         </li>
       </ul>
-    </box>
+    </section>
 
-    <box class="box box-xl">
-      <title class="box-in">
+    <section class="box box-xl">
+      <div class="box-in">
         Links, no icons
-      </title>
+      </div>
       <ul class="list">
         <li>
           <a href="" class="list-content">
@@ -188,12 +188,12 @@
           </a>
         </li>
       </ul>
-    </box>
+    </section>
 
-    <box class="box box-xl">
-      <title class="box-in">
+    <section class="box box-xl">
+      <div class="box-in">
         Grouped with sticky titles
-      </title>
+      </div>
       <div class="list-group">
         <ul class="list">
           <li class="list-divider">
@@ -296,12 +296,12 @@
           </li>
         </ul>
       </div>
-    </box>
+    </section>
 
-    <box class="box box-xl">
-      <title class="box-in">
+    <section class="box box-xl">
+      <div class="box-in">
         Mixed and nested
-      </title>
+      </div>
       <ul class="list">
         <li>
           <a href="" class="list-content">
@@ -488,12 +488,12 @@
           </div>
         </li>
       </ul>
-    </box>
+    </section>
 
-    <box class="box box-xl">
-      <title class="box-in">
+    <section class="box box-xl">
+      <div class="box-in">
         Mixed, inset
-      </title>
+      </div>
       <ul class="list list-inset">
         <li>
           <a href="" class="list-content">
@@ -576,12 +576,12 @@
           </div>
         </li>
       </ul>
-    </box>
+    </section>
 
-    <box class="box box-xl">
-      <title class="box-in">
+    <section class="box box-xl">
+      <div class="box-in">
         Tablet inset
-      </title>
+      </div>
       <ul class="list list-tablet-inset">
         <li>
           <a href="" class="list-content">
@@ -664,8 +664,8 @@
           </div>
         </li>
       </ul>
-    </box>
-  </main>
+    </section>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
