--- a/framework/badge.html
+++ b/framework/badge.html
@@ -13,8 +13,8 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-lg">
+  <div class="main">
+    <section class="box box-lg">
       <ul class="list">
         <li class="list-content">
           <div class="list-media">
@@ -33,8 +33,8 @@
           </div>
         </li>
       </ul>
-    </box>
-    <box class="box box-lg">
+    </section>
+    <section class="box box-lg">
       <ul class="list">
         <li class="list-content">
           <div class="list-media">
@@ -53,18 +53,18 @@
           </div>
         </li>
       </ul>
-    </box>
-    <box class="box box-lg">
+    </section>
+    <section class="box box-lg">
       <a href="" class="">
         <i class="fa fa-home fa-2x"><span class="badge bg-red">9</span></i>
       </a>
-    </box>
-    <box class="box box-lg">
+    </section>
+    <section class="box box-lg">
       <a href="" class="">
         <i class="fa fa-home fa-2x"><span class="badge badge-dot bg-red"></span></i>
       </a>
-    </box>
-  </main>
+    </section>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
