--- a/framework/btn.html
+++ b/framework/btn.html
@@ -16,42 +16,56 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-lg">
-      <a href="" class="btn">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <a href="" class="btn active">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <a href="" class="btn btn-link">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <a href="" class="btn btn-lg">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <a href="" class="btn btn-rd">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <a href="" class="btn btn-lg bg-green">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <a href="" class="btn btn-lg bg-red">this is btn</a>
-    </box>
-    <box class="box box-lg">
-      <div class="btn-group">
-        <a href="" class="btn">this is btn</a>
+  <div class="main">
+    <section class="box box-lg">
+      <div class="box-in">
         <a href="" class="btn">this is btn</a>
       </div>
-    </box>
-    <box class="box box-lg">
-      <div class="btn-group">
-        <a href="" class="btn">this is btn</a>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
         <a href="" class="btn active">this is btn</a>
-        <a href="" class="btn">this is btn</a>
       </div>
-    </box>
-  </main>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <a href="" class="btn btn-link">this is btn</a>
+      </div>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <a href="" class="btn btn-lg">this is btn</a></div>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <a href="" class="btn btn-rd">this is btn</a></div>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <a href="" class="btn btn-lg bg-green">this is btn</a></div>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <a href="" class="btn btn-lg bg-red">this is btn</a></div>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <div class="btn-group">
+          <a href="" class="btn">this is btn</a>
+          <a href="" class="btn">this is btn</a>
+        </div>
+      </div>
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
+        <div class="btn-group">
+          <a href="" class="btn">this is btn</a>
+          <a href="" class="btn active">this is btn</a>
+          <a href="" class="btn">this is btn</a>
+        </div>
+      </div>
+    </section>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
