--- a/framework/grid.html
+++ b/framework/grid.html
@@ -13,8 +13,8 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-lg">
+  <div class="main grid-test">
+    <section class="box box-lg">
       <title class="box-in">
         grid-1
       </title>
@@ -35,11 +35,21 @@
               1234
             </div>
           </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
         </div>
       </div>
-    </box>
+    </section>
 
-    <box class="box box-lg">
+    <section class="box box-lg">
       <title class="box-in">
         grid-2
       </title>
@@ -60,11 +70,21 @@
               1234
             </div>
           </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
         </div>
       </div>
-    </box>
+    </section>
 
-    <box class="box box-lg">
+    <section class="box box-lg">
       <title class="box-in">
         grid-3
       </title>
@@ -85,10 +105,88 @@
               1234
             </div>
           </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
         </div>
       </div>
-    </box>
-  </main>
+    </section>
+    <section class="box box-lg">
+      <title class="box-in">
+        grid-4
+      </title>
+      <div class="grid-wrap">
+        <div class="grid grid-4">
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="box box-lg">
+      <title class="box-in">
+        grid-5
+      </title>
+      <div class="grid-wrap">
+        <div class="grid grid-5">
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+          <div class="grid-col">
+            <div class="grid-in">
+              1234
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
