--- a/framework/theme.html
+++ b/framework/theme.html
@@ -13,11 +13,11 @@
     <div class="header-right">
     </div>
   </header>
-  <main class="main">
-    <box class="box box-lg">
-      <title class="box-in">
+  <div class="main">
+    <section class="box box-lg">
+      <div class="box-in">
         Choose Layout Theme
-      </title>
+      </div>
       <div class="grid-wrap">
         <div class="grid grid-3">
           <div class="grid-col">
@@ -37,11 +37,11 @@
           </div>
         </div>
       </div>
-    </box>
-    <box class="box box-lg">
-      <title class="box-in">
+    </section>
+    <section class="box box-lg">
+      <div class="box-in">
         Choose Color Theme
-      </title>
+      </div>
       <div class="grid-wrap">
         <div class="grid grid-5">
           <div class="grid-col">
@@ -96,8 +96,8 @@
           </div>
         </div>
       </div>
-    </box>
-  </main>
+    </section>
+  </div>
   <footer class="footer">
     <div>
       <a href="" class="btn btn-link">Link</a>
